--- a/app.yaml
+++ b/app.yaml
@@ -16,7 +16,7 @@ handlers:
 - url: /static/
   static_dir: static
 
-- url: /(load|post|init|flush)
+- url: /(load|post|init|flush|preview)
   script: _go_app
   login: admin
 
