Admin and blog pages now link to each other (if you're an admin), plus auto-init walkthrough

--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,7 @@ handlers:
   static_files: static/admin.html
   upload: static/admin.html
   login: admin
+  secure: always
 
 - url: /favicon.ico
   static_files: static/favicon.ico
