--- a/app.yaml
+++ b/app.yaml
@@ -17,7 +17,7 @@ handlers:
 - url: /static/
   static_dir: static
 
-- url: /(load|post|init|flush|preview|info|verify)
+- url: /(load|post|init|flush|preview|info|verify|delete)
   script: _go_app
   login: admin
 
