--- a/app.yaml
+++ b/app.yaml
@@ -16,6 +16,7 @@ handlers:
 
 - url: /static/
   static_dir: static
+  expiration: 7d
 
 - url: /(load|post|init|flush|preview|info|verify|delete)
   script: _go_app
