Uncommented date projection query, which works in SDK 1.8.4, but did not in 1.8.3

--- a/index.yaml
+++ b/index.yaml
@@ -12,6 +12,21 @@ indexes:
 
 - kind: Post
   properties:
+  - name: Date
+    direction: desc
+  - name: Lead
+  - name: Title
+
+- kind: Post
+  properties:
   - name: Hidden
   - name: Date
     direction: desc
+
+- kind: Post
+  properties:
+  - name: Hidden
+  - name: Date
+    direction: desc
+  - name: Lead
+  - name: Title
