--- a/app.yaml
+++ b/app.yaml
@@ -14,6 +14,10 @@ handlers:
   static_files: static/favicon.ico
   upload: static/favicon.ico
 
+- url: /robots.txt
+  static_files: static/robots.txt
+  upload: static/favicon.ico
+
 - url: /static/
   static_dir: static
   expiration: 7d
